# aiogram-weather-bot

./: .env.example  .gitignore  README.md  docker-compose.example  main.py  pyproject.toml
app/bot/: bot.py
app/bot/handlers/: commands.py
app/bot/i18n/: translator_hub.py
config/: config.py  settings.toml
locales/en/: txt.ftl
locales/ru/: txt.ftl
migration/: env.py
nats_broker/: nats_connect.py
nats_broker/migrations/: create_stream.py
src/bot/: __init__.py  bot.py
src/bot/dialogs/flows/: __init__.py
src/bot/dialogs/flows/language_settings/: dialogs.py  getters.py  handlers.py
src/bot/dialogs/flows/registration/: dialogs.py  getters.py  handlers.py  states.py
src/bot/dialogs/flows/settings/: dialogs.py  getters.py  handlers.py  keyboards.py
src/bot/dialogs/flows/start/: dialogs.py  getters.py
src/bot/dialogs/flows/start_registration/: dialogs.py  states.py
src/bot/dialogs/flows/weather/: dialogs.py  getters.py  handlers.py  states.py
src/bot/enums/: roles.py
src/bot/filters/: dialog_filters.py
src/bot/handlers/: __init__.py  commands.py  errors.py
src/bot/i18n/: translator_hub.py
src/bot/keyboards/: coords_kb.py  menu_button.py
src/bot/middlewares/: database.py  get_user.py  i18n.py  shadow_ban.py
src/infrastructure/cache/: __init__.py  connect_to_redis_pool.py  redis_service.py  redis_services.py
src/infrastructure/database/: dao.py  database.py  models.py
src/infrastructure/storage/storage/: redis_storage.py
src/services/delay_service/: consumer.py  publisher.py  start_consumer.py
src/services/delay_service/models/: delayed_messages.py
src/services/scheduler/: taskiq_broker.py  tasks.py
src/services/weather_api/: weather_emojis.py  weather_parsing.py  weather_service.py
