[project]
name = "aiogram-weather-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiogram-dialog>=2.3.1",
    "alembic>=1.15.2",
    "dynaconf>=3.2.10",
    "fluentogram>=1.1.10",
    "pydantic>=2.0.0",
    "asyncpg (>=0.30.0,<0.31.0)",
    "redis (>=7.0.1,<8.0.0)",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]

[tool.poetry]
name = "aiogram-weather-bot"
version = "0.1.0"
description = ""
authors = ["Inquisitor <ruslangrisha3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
